Replaced some project images, added 1 new project and one filler, made adjustments to the project CSS style and added a header for the projects

--- a/.gitignore
+++ b/.gitignore
@@ -128,3 +128,8 @@ dmypy.json
 # Pyre type checker
 .pyre/
 test.html
+.idea/.gitignore
+.idea/discord.xml
+.idea/kotmasters.iml
+.idea/modules.xml
+.idea/vcs.xml
